[package]
name = "morse"
version = "0.1.0"
authors = ["Thomas <thomastimmer11@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# we only need it for playing sin waves
rodio = {version = "*", default-features = false}
morse_code = {git = "https://github.com/thomas9911/morse_code"}